tests/baselines/reference/extBaseClass2.errors.txt
==== tests/cases/compiler/extBaseClass2.ts (2 errors) ====
    module N {
        export class C4 extends M.B {
                                  ~
!!! extBaseClass2.ts(2,31): error TS2094: The property 'B' does not exist on value of type 'M'.
        }
    }
    
    module M {
        export class C5 extends B {
                                ~
!!! extBaseClass2.ts(7,29): error TS2095: Could not find symbol 'B'.
        }
    }
    